# gramoxide

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs  ngram.rs  parser.rs
src/ngram/: ngram_analyzer.rs  ngram_downloader.rs  ngram_lang.rs
src/parser/: corpus.pest
