[package]
name = "gramoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
bytes = "1"
reqwest = "0.11"
flate2 = "1.0"
thiserror = "1.0"
toml = "0.5"
rayon = "1.5"
pest = "2.2"
pest_derive = "2.2"